--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "binary-upload-boom",
+  "name": "rate-your-rental",
   "version": "1.0.0",
-  "description": "100Devs Social Network",
+  "description": "Rental property rater",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -10,16 +10,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.3.0-alpha1",
     "cloudinary": "^1.25.1",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
-    "mongodb": "^3.6.5",
+    "mongodb": "^3.7.3",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -27,5 +29,13 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "validator": "^13.6.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eleanorlatus/rate-your-rental.git"
+  },
+  "bugs": {
+    "url": "https://github.com/eleanorlatus/rate-your-rental/issues"
+  },
+  "homepage": "https://github.com/eleanorlatus/rate-your-rental#readme"
 }
