--- a/package.json
+++ b/package.json
@@ -37,10 +37,5 @@
   "bugs": {
     "url": "https://github.com/eleanorlatus/rate-your-rental/issues"
   },
-  "homepage": "https://github.com/eleanorlatus/rate-your-rental#readme",
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
-  }
+  "homepage": "https://github.com/eleanorlatus/rate-your-rental#readme"
 }
