--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
   "bugs": {
     "url": "https://github.com/eleanorlatus/rate-your-rental/issues"
   },
-  "homepage": "https://github.com/eleanorlatus/rate-your-rental#readme"
+  "homepage": "https://github.com/eleanorlatus/rate-your-rental#readme",
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21"
+  }
 }
