--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Rental property rater",
   "main": "server.js",
   "scripts": {
+    "build-css": "tailwindcss -i src/style.css -o public/style.css --watch",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -40,6 +41,7 @@
   "homepage": "https://github.com/eleanorlatus/rate-your-rental#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
