--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "cloudinary": "^1.25.1",
     "connect-mongo": "^3.2.0",
+    "daisyui": "^2.50.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
