--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "nodemon": "^2.0.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "watch": "^0.13.0"
   },
   "repository": {
     "type": "git",
@@ -43,6 +44,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
+    "tailwind-watch": "^0.0.6",
     "tailwindcss": "^3.2.4"
   }
 }
